Package_Tools/include-C/efl/efl-1/interfaces/inarbeit/fertig/efl_gfx_hint_eo.pp


unit efl_gfx_hint_eo;
interface

{
  Automatically converted by H2Pas 1.0.0 from efl_gfx_hint_eo.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    efl_gfx_hint_eo.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pdouble  = ^double;
PEfl_Class  = ^Efl_Class;
PEfl_Gfx_Align  = ^Efl_Gfx_Align;
PEfl_Gfx_Hint  = ^Efl_Gfx_Hint;
PEfl_Gfx_Hint_Aspect  = ^Efl_Gfx_Hint_Aspect;
PEina_Bool  = ^Eina_Bool;
PEina_Size2D  = ^Eina_Size2D;
PEo  = ^Eo;
Plongint  = ^longint;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{$ifndef _EFL_GFX_HINT_EO_H_}
{$define _EFL_GFX_HINT_EO_H_}
{$ifndef _EFL_GFX_HINT_EO_CLASS_TYPE}
{$define _EFL_GFX_HINT_EO_CLASS_TYPE}
type
  PEfl_Gfx_Hint = ^TEfl_Gfx_Hint;
  TEfl_Gfx_Hint = TEo;
{$endif}
{$ifndef _EFL_GFX_HINT_EO_TYPES}
{$define _EFL_GFX_HINT_EO_TYPES}
{$ifndef EFL_GFX_HINT_EXPAND}
{* Use with @ref efl_gfx_hint_weight_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Expand
  }

const
  EFL_GFX_HINT_EXPAND = 1.000000;  
{$endif}
{$ifndef EFL_GFX_HINT_ALIGN_LEFT}
{* Use with @ref efl_gfx_hint_align_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Align_Left
  }

const
  EFL_GFX_HINT_ALIGN_LEFT = 0.000000;  
{$endif}
{$ifndef EFL_GFX_HINT_ALIGN_RIGHT}
{* Use with @ref efl_gfx_hint_align_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Align_Right
  }

const
  EFL_GFX_HINT_ALIGN_RIGHT = 1.000000;  
{$endif}
{$ifndef EFL_GFX_HINT_ALIGN_TOP}
{* Use with @ref efl_gfx_hint_align_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Align_Top
  }

const
  EFL_GFX_HINT_ALIGN_TOP = 0.000000;  
{$endif}
{$ifndef EFL_GFX_HINT_ALIGN_BOTTOM}
{* Use with @ref efl_gfx_hint_align_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Align_Bottom
  }

const
  EFL_GFX_HINT_ALIGN_BOTTOM = 1.000000;  
{$endif}
{$ifndef EFL_GFX_HINT_ALIGN_CENTER}
{* Use with @ref efl_gfx_hint_align_get.
 *
 * @since 1.23
 *
 * @ingroup Efl_Gfx_Hint_Align_Center
  }

const
  EFL_GFX_HINT_ALIGN_CENTER = 0.500000;  
{$endif}
{$endif}
{* Efl graphics hint interface
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }

{ was #define dname def_expr }
function EFL_GFX_HINT_INTERFACE : longint; { return type might be wrong }

(* Const before type ignored *)
function efl_gfx_hint_interface_get:PEfl_Class;cdecl;external;
{*
 * @brief Defines the aspect ratio to respect when scaling this object.
 *
 * The aspect ratio is defined as the width / height ratio of the object.
 * Depending on the object and its container, this hint may or may not be fully
 * respected.
 *
 * If any of the given aspect ratio terms are 0, the object's container will
 * ignore the aspect and scale this object to occupy the whole available area,
 * for any given policy.
 *
 * @param[in] obj The object.
 * @param[in] mode Mode of interpretation.
 * @param[in] sz Base size to use for aspecting.
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
procedure efl_gfx_hint_aspect_set(obj:PEo; mode:TEfl_Gfx_Hint_Aspect; sz:TEina_Size2D);cdecl;external;
{*
 * @brief Defines the aspect ratio to respect when scaling this object.
 *
 * The aspect ratio is defined as the width / height ratio of the object.
 * Depending on the object and its container, this hint may or may not be fully
 * respected.
 *
 * If any of the given aspect ratio terms are 0, the object's container will
 * ignore the aspect and scale this object to occupy the whole available area,
 * for any given policy.
 *
 * @param[in] obj The object.
 * @param[out] mode Mode of interpretation.
 * @param[out] sz Base size to use for aspecting.
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
(* Const before type ignored *)
procedure efl_gfx_hint_aspect_get(obj:PEo; mode:PEfl_Gfx_Hint_Aspect; sz:PEina_Size2D);cdecl;external;
{*
 * @brief Hints on the object's maximum size.
 *
 * This is not a size enforcement in any way, it's just a hint that should be
 * used whenever appropriate.
 *
 * The object container is in charge of fetching this property and placing the
 * object accordingly.
 *
 * Values -1 will be treated as unset hint components, when queried by
 * managers.
 *
 * @note Smart objects (such as elementary) can have their own hint policy. So
 * calling this API may or may not affect the size of smart objects.
 *
 * @note It is an error for the @ref efl_gfx_hint_size_max_get to be smaller in
 * either axis than @ref efl_gfx_hint_size_min_get. In this scenario, the max
 * size hint will be prioritized over the user min size hint.
 *
 * @param[in] obj The object.
 * @param[in] sz Maximum size (hint) in pixels, (-1, -1) by default for canvas
 * objects).
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
procedure efl_gfx_hint_size_max_set(obj:PEo; sz:TEina_Size2D);cdecl;external;
{*
 * @brief Hints on the object's maximum size.
 *
 * This is not a size enforcement in any way, it's just a hint that should be
 * used whenever appropriate.
 *
 * The object container is in charge of fetching this property and placing the
 * object accordingly.
 *
 * Values -1 will be treated as unset hint components, when queried by
 * managers.
 *
 * @note Smart objects (such as elementary) can have their own hint policy. So
 * calling this API may or may not affect the size of smart objects.
 *
 * @note It is an error for the @ref efl_gfx_hint_size_max_get to be smaller in
 * either axis than @ref efl_gfx_hint_size_min_get. In this scenario, the max
 * size hint will be prioritized over the user min size hint.
 *
 * @param[in] obj The object.
 *
 * @return Maximum size (hint) in pixels, (-1, -1) by default for canvas
 * objects).
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
(* Const before type ignored *)
function efl_gfx_hint_size_max_get(obj:PEo):TEina_Size2D;cdecl;external;
{$ifdef EFL_GFX_HINT_PROTECTED}
{*
 * @brief Internal hints for an object's maximum size.
 *
 * This is not a size enforcement in any way, it's just a hint that should be
 * used whenever appropriate.
 *
 * Values -1 will be treated as unset hint components, when queried by
 * managers.
 *
 * @note This property is internal and meant for widget developers to define
 * the absolute maximum size of the object. EFL itself sets this size
 * internally, so any change to it from an application might be ignored.
 * Applications should use @ref efl_gfx_hint_size_max_get instead.
 *
 * @note It is an error for the @ref efl_gfx_hint_size_restricted_max_get to be
 * smaller in either axis than @ref efl_gfx_hint_size_restricted_min_get. In
 * this scenario, the max size hint will be prioritized over the user min size
 * hint.
 *
 * This function is protected as it is meant for widgets to indicate their
 * "intrinsic" maximum size.
 *
 * @param[in] obj The object.
 * @param[in] sz Maximum size (hint) in pixels.
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
procedure efl_gfx_hint_size_restricted_max_set(obj:PEo; sz:TEina_Size2D);cdecl;external;
{$endif}
{*
 * @brief Internal hints for an object's maximum size.
 *
 * This is not a size enforcement in any way, it's just a hint that should be
 * used whenever appropriate.
 *
 * Values -1 will be treated as unset hint components, when queried by
 * managers.
 *
 * @note This property is internal and meant for widget developers to define
 * the absolute maximum size of the object. EFL itself sets this size
 * internally, so any change to it from an application might be ignored.
 * Applications should use @ref efl_gfx_hint_size_max_get instead.
 *
 * @note It is an error for the @ref efl_gfx_hint_size_restricted_max_get to be
 * smaller in either axis than @ref efl_gfx_hint_size_restricted_min_get. In
 * this scenario, the max size hint will be prioritized over the user min size
 * hint.
 *
 * @param[in] obj The object.
 *
 * @return Maximum size (hint) in pixels.
 *
 * @since 1.22
 *
 * @ingroup Efl_Gfx_Hint
  }
(* Const before type ignored *)
